# ec-url-store

./: .gitignore  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yaml
crates/api/: .env  .env.example  Cargo.toml  package.json
crates/api/src/: main.rs
crates/api/src/dto/: mod.rs  stats.rs  url.rs
crates/api/src/libs/: http.rs  jwt.rs  mod.rs  redis.rs
crates/api/src/repository/: db.rs  models.rs
crates/api/src/repository/sql/: insert_analytics.sql  insert_url.sql  select_url.sql  stats_analytics.sql  stats_analytics_all.sql  stats_url_all.sql
crates/api/src/utils/: config.rs  errors.rs  grpc_client.rs  mod.rs
crates/geo-ip/: .env.example  Cargo.toml  build.rs  package.json
crates/geo-ip/proto/: req.proto
crates/geo-ip/src/: main.rs
crates/geo-ip/src/libs/: grpc.rs  server.rs
crates/geo-ip/src/utils/: config.rs
crates/grpc_proto/: Cargo.toml
crates/grpc_proto/src/: lib.rs
crates/seed-gen/: Cargo.toml
crates/seed-gen/src/: lib.rs
scripts/: download.ip-db.sh
