[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
confik = "0.11"
redis = { version = "0.27.4", features = ["tokio-comp"] }
tokio = { version = "1.40.0", features = ["full"] }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
hyperflake-rs = "0.1.0"
env_logger = "0.11.0"
lazy_static = "1.4"
listenfd = "1.0.1"
tracing-actix-web = "0.7"
tracing = "0.1"
jwtk = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
seed-gen = { path = "../seed-gen" }
arrow = "53.1.0"
grpc_proto = { path = "../grpc_proto" }
tonic = "0.12.3"

[profile.release]
lto = true
codegen-units = 1
debug = false
panic = "abort"