[package]
name = "grpc_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
prost = "0.13.3"
tonic = "0.12.3"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
async-stream = { version = "0.3", optional = true }
tokio-util = { version = "0.7.8", optional = true }
maxminddb = "0.24.0"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12.3"